--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -12,32 +12,60 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/button_toast"
-        android:layout_width="wrap_content"
+    <!-- LinearLayout for buttons in one row -->
+    <LinearLayout
+        android:id="@+id/button_row"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="#3DCE0C"
-        android:text="@string/button_label_toast" />
+        android:orientation="horizontal">
 
+        <Button
+            android:id="@+id/button_contact"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#3DCE0C"
+            android:text="@string/button_label_browser" />
+
+        <Button
+            android:id="@+id/Tiktok"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#3DCE0C"
+            android:text="@string/button_label_tiktok" />
+
+        <Button
+            android:id="@+id/button_toast"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#3DCE0C"
+            android:text="@string/button_label_toast" />
+
+        <Button
+            android:id="@+id/button_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#3DCE0C"
+            android:text="@string/button_label_count" />
+
+        <Button
+            android:id="@+id/button_switchpage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#3DCE0C"
+            android:text="@string/button_label_pindah" />
+
+    </LinearLayout>
+
+    <!-- TextView for count display -->
     <TextView
         android:id="@+id/show_count"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="160sp"
         android:background="#FFFF00"
-        android:layout_weight="2"
         android:gravity="center"
         android:text="@string/count_initial_value"
-        android:layout_below="@+id/button_toast"
+        android:layout_below="@id/button_row"
         android:layout_marginTop="30dp" />
 
-
-    <Button
-        android:id="@+id/button_count"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#3DCE0C"
-        android:text="@string/button_label_count"
-        android:layout_marginLeft="50dp"
-        android:layout_toRightOf="@id/button_toast"/>
 </RelativeLayout>
